# cpp-gl-skeletal-animation

./: .gitmodules  CMakeLists.txt  Readme.md
src/: main.cpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
src/shaders/: default.fs  default.vs
